syntax = "proto3";

package user_stats;

// Service for user statistics operations
service UserStatsService {
    // Get current user statistics using JWT token authentication
    rpc GetCurrentUserStats(GetCurrentUserStatsRequest) returns (GetCurrentUserStatsResponse);
}

// Request message for getting current user stats
// The JWT token will be passed via gRPC metadata (Authorization header)
message GetCurrentUserStatsRequest {
    // Empty request body - user ID will be extracted from JWT token
}

// Response message containing user information with statistics
message GetCurrentUserStatsResponse {
    string user_id = 1;
    string email = 2;
    string full_name = 3;
    optional string preferences = 4;  // JSON string, optional
    string created_at = 5;  // ISO 8601 timestamp
    string updated_at = 6;  // ISO 8601 timestamp
    int64 refresh_token_count = 7;
    optional string last_login = 8;  // ISO 8601 timestamp, optional
}

// Error response for authentication failures
message AuthError {
    string message = 1;
    string code = 2;
}

// Error response for user not found
message UserNotFoundError {
    string message = 1;
    string user_id = 2;
}